--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
-platform = espressif32
-board = esp32dev
+
+[env:esp8266]
+platform = espressif8266
+board = nodemcuv2
 framework = arduino
 lib_deps = 
     olikraus/U8g2
