Finalize ESP32 SH1106 OLED, rotary encoder, and motor control logic with improved button and encoder handling

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,9 +9,9 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 
-[env:esp8266]
-platform = espressif8266
-board = nodemcuv2
+[env:esp32dev]
+platform = espressif32
+board = esp32dev
 framework = arduino
 lib_deps = 
     olikraus/U8g2
